salesforce/force-app/main/default/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <description>A WhatsApp conversation thread between a customer number and a channel.</description>
    <label>WhatsApp Conversation</label>
    <pluralLabel>WhatsApp Conversations</pluralLabel>
    <nameField>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
        <displayFormat>WC-{00000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>