salesforce/force-app/main/default/objects/Conversation__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <description>The WhatsApp channel this conversation belongs to.</description>
    <type>Lookup</type>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>