salesforce/force-app/main/default/objects/Conversation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Matched Contact for the customer number, if any.</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WhatsApp Conversations</relationshipLabel>
    <relationshipName>MaxDoot_Conversations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>