salesforce/force-app/main/default/objects/Conversation__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <description>The customer's WhatsApp number (E.164).</description>
    <type>Phone</type>
</CustomField>