salesforce/force-app/main/default/objects/Conversation__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <description>Unique upsert key, composed as heydootChannelId:customerNumber.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>