salesforce/force-app/main/default/objects/Conversation__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <description>Display name of the WhatsApp group, when this is a group chat.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>