salesforce/force-app/main/default/objects/Conversation__c/fields/Is_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_Group__c</fullName>
    <label>Is Group</label>
    <description>True when this conversation is a WhatsApp group chat.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>