salesforce/force-app/main/default/objects/Conversation__c/fields/Last_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound__c</fullName>
    <label>Last Inbound</label>
    <description>Timestamp of the most recent inbound message.</description>
    <type>DateTime</type>
</CustomField>