salesforce/force-app/main/default/objects/Conversation__c/fields/Last_Message_Preview__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Preview__c</fullName>
    <label>Last Message Preview</label>
    <description>Truncated text of the latest message for inbox display.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>