salesforce/force-app/main/default/objects/Conversation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <description>Matched Lead for the customer number, if any.</description>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>WhatsApp Conversations</relationshipLabel>
    <relationshipName>MaxDoot_Conversations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>