salesforce/force-app/main/default/objects/Conversation__c/fields/Owner_Agent__c.field-meta.xml
<CustomField>
    <fullName>Owner_Agent__c</fullName>
    <label>Owner Agent</label>
    <description>Agent currently handling the conversation.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned WhatsApp Conversations</relationshipLabel>
    <relationshipName>Owned_MaxDoot_Conversations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>