salesforce/force-app/main/default/objects/Conversation__c/fields/Unread_Count__c.field-meta.xml
<CustomField>
    <fullName>Unread_Count__c</fullName>
    <label>Unread Count</label>
    <description>Number of unread inbound messages.</description>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>