salesforce/force-app/main/default/objects/Conversation__c/fields/Window_Expires__c.field-meta.xml
<CustomField>
    <fullName>Window_Expires__c</fullName>
    <label>Window Expires</label>
    <description>End of the 24-hour customer service window (relevant for Business API sends).</description>
    <type>DateTime</type>
</CustomField>